# Matam_3

./: .gitignore  CMakeLists.txt  README.md  inheritance.graphml  main.cpp
wet_files/: Auxilaries.h  Complex.cpp  Complex.h  MtmExceptions.h  MtmMat.cpp  MtmMat.h  MtmMatSq.h  MtmMatTriag.h  MtmVec.cpp  MtmVec.h  main.cpp  main2.cpp  somemain.cpp  test.cpp
